k8s/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-interaction-api-prefix
  namespace: interaction-api
spec:
  stripPrefix:
    prefixes:
      - /interaction-api
