k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: interaction-api
  namespace: interaction-api
spec:
  type: ClusterIP
  selector:
    app: interaction-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
