k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: interaction-api
  namespace: interaction-api
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: interaction-api-strip-interaction-api-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /interaction-api
            pathType: Prefix
            backend:
              service:
                name: interaction-api
                port:
                  number: 3000
